db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  clusterIP: None  
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
